ok actually fixed scroll on mobile this time.

--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -273,6 +273,7 @@ body {
     width:auto;
     padding:0;
     overflow:scroll;
+    -webkit-overflow-scrolling: touch;
     .accordion{
         background-color: #444;
         color: #ccc;
